# rfid

shims/: .gitignore
shims/raspberry-pi/: CMakeLists.txt  build.sh
shims/raspberry-pi/Arduino/: Arduino.h  SPI.cpp  SPI.h  Serial.cpp  Serial.h  definitions.h
shims/raspberry-pi/Ardunio/: Arduino.h  SPI.h
shims/raspberry-pi/test/: MFRC522_test.cpp  build.sh  constants.h  firmware_check_version.cpp  read_nuid.cpp
